--- a/wofi/.config/wofi/style.css
+++ b/wofi/.config/wofi/style.css
@@ -31,7 +31,7 @@ background-color: #463f3a;
 background-color: rgba(0,0,0,0);
 }
 #text:selected {
-border: 2px solid #302B26;
-background-color: #302B26;
+border: 2px solid #3B342F;
+background-color: #3B342F;
 }
 
