--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -74,9 +74,9 @@ mpd {
     margin: 0 4px;
     color: #ffffff;
 }
-#clock {
+/* #clock {
     background-color: #585123;
-}
+} */
 
 @keyframes blink {
     to {
