--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -2,7 +2,7 @@
     border: none;
     border-radius: 0;
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: JetBrains Mono, Roboto, Helvetica, Arial, sans-serif;
+    font-family: JetBrains Mono, sans-serif;
     font-size: 13px;
     min-height: 0;
 }
@@ -10,13 +10,18 @@
 window#waybar {
     background-color: rgba(43, 48, 59, 0.5);
     border-bottom: 3px solid rgba(100, 114, 125, 0.5);
-    color: #ffffff;
+    color: #d5c4a1;
     transition-property: background-color;
     transition-duration: .5s;
 }
 
 window#waybar.hidden {
     opacity: 0.2;
+}
+
+#window {
+  font-family: Product Sans;
+  font-size: 14px;
 }
 
 /*
@@ -31,7 +36,7 @@ window#waybar.solo {
 #workspaces button {
     padding: 0 5px;
     background-color: transparent;
-    color: #ffffff;
+    color: #d5c4a1;
     /* Use box-shadow instead of border so the text isn't offset */
     box-shadow: inset 0 -3px transparent;
 }
@@ -39,12 +44,13 @@ window#waybar.solo {
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button:hover {
     background: rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 -3px #ffffff;
+    box-shadow: inset 0 -3px #fbf1c7;
 }
 
 #workspaces button.focused {
-    background-color: #a44a3f;
-    box-shadow: inset 0 -3px #ffffff;
+    background-color: #af3a03;
+    box-shadow: inset 0 -3px #fbf1c7;
+    color: #d5c4a1;
 }
 
 #workspaces button.urgent {
@@ -53,7 +59,7 @@ window#waybar.solo {
 
 #mode {
     background-color: #64727D;
-    border-bottom: 3px solid #ffffff;
+    border-bottom: 3px solid #fbf1c7;
 }
 
 #clock,
@@ -88,31 +94,42 @@ mpd {
 label:focus {
     background-color: #000000;
 }
-
+#clock {
+    background-color: transparent;
+    color: #fbf1c7;
+}
 #cpu {
-    background-color: #eec170;
-    color: #000000;
+    background-color: #076678;
+    color: #fbf1c7;
+    box-shadow: inset 0 -3px #fbf1c7;
 }
 
 #memory {
-    background-color: #f58549;
+    background-color: #b16286;
+    color: #ebdbb2;
+    box-shadow: inset 0 -3px #fbf1c7;
 }
 
 #backlight {
     background-color: #90b1b1;
+    box-shadow: inset 0 -3px #fbf1c7;
 }
 
 #network {
-    background-color: #b36a5e;
+    background-color: #79740e;
+    color: #d5c4a1;
+    box-shadow: inset 0 -3px #fbf1c7;
 }
 
 #network.disconnected {
-    background-color: #f95738;
+    background-color: #9d0006;
+    box-shadow: inset 0 -3px #fbf1c7;
 }
 
 #pulseaudio {
-    background-color: #f4d35e;
-    color: #000000;
+    background-color: #665c54;
+    color: #bdae93;
+    box-shadow: inset 0 -3px #fbf1c7;
 }
 
 #pulseaudio.muted {
@@ -127,22 +144,26 @@ label:focus {
 }
 
 #temperature {
-    background-color: #772f1a;
+    background-color: #427b58;
+    color: #d5c4a1;
+    box-shadow: inset 0 -3px #fbf1c7;
 }
 
 #temperature.critical {
-    background-color: #eb4d4b;
+    background-color: #cc241d;
 }
 
 #tray {
     background-color: #2980b9;
+    box-shadow: inset 0 -3px #ffffff;
 }
 
 #idle_inhibitor {
-    background-color: #28666e;
+    background-color: #928374;
+    box-shadow: inset 0 -3px #fbf1c7;
 }
 
 #idle_inhibitor.activated {
-    background-color: #bfd7ea;
-    color: #2d3436;
+    background-color: #a89984;
+    color: #3c3836;
 }
