--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -173,4 +173,5 @@ label:focus {
   background-color: #d65d0e;
   color: #d5c4a1;
   box-shadow: inset 0 -3px #fbf1c7;
+  font-family: Cantarell;
 }
