--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -8,8 +8,7 @@
 }
 
 window#waybar {
-    background-color: rgba(43, 48, 59, 0.5);
-    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
+    background-color: rgba(43, 48, 59, 0.4);
     color: #d5c4a1;
     transition-property: background-color;
     transition-duration: .5s;
@@ -51,6 +50,7 @@ window#waybar.solo {
     background-color: #af3a03;
     box-shadow: inset 0 -3px #fbf1c7;
     color: #d5c4a1;
+    border-radius: 5px;
 }
 
 #workspaces button.urgent {
@@ -75,6 +75,7 @@ window#waybar.solo {
 #mode,
 #idle_inhibitor,
 #custom-firefox_media,
+#custom-power,
 
 #mpd {
     padding: 0 10px;
@@ -102,24 +103,24 @@ label:focus {
 #cpu {
     background-color: #076678;
     color: #fbf1c7;
-    box-shadow: inset 0 -3px #fbf1c7;
+    border-radius: 5px;
 }
 
 #memory {
     background-color: #b16286;
     color: #ebdbb2;
-    box-shadow: inset 0 -3px #fbf1c7;
+    border-radius: 5px;
 }
 
 #backlight {
     background-color: #90b1b1;
-    box-shadow: inset 0 -3px #fbf1c7;
+    border-radius: 5px;
 }
 
 #network {
     background-color: #79740e;
     color: #d5c4a1;
-    box-shadow: inset 0 -3px #fbf1c7;
+    border-radius: 5px;
 }
 
 #network.disconnected {
@@ -130,7 +131,7 @@ label:focus {
 #pulseaudio {
     background-color: #665c54;
     color: #bdae93;
-    box-shadow: inset 0 -3px #fbf1c7;
+    border-radius: 5px;
 }
 
 #pulseaudio.muted {
@@ -138,16 +139,10 @@ label:focus {
     color: #2a5c45;
 }
 
-#custom-media {
-    background-color: #66cc99;
-    color: #2a5c45;
-    min-width: 100px;
-}
-
 #temperature {
     background-color: #427b58;
     color: #d5c4a1;
-    box-shadow: inset 0 -3px #fbf1c7;
+    border-radius: 5px;
 }
 
 #temperature.critical {
@@ -161,7 +156,7 @@ label:focus {
 
 #idle_inhibitor {
     background-color: #928374;
-    box-shadow: inset 0 -3px #fbf1c7;
+    border-radius: 5px;
 }
 
 #idle_inhibitor.activated {
@@ -172,6 +167,13 @@ label:focus {
 #custom-firefox_media {
   background-color: #d65d0e;
   color: #d5c4a1;
-  box-shadow: inset 0 -3px #fbf1c7;
   font-family: Cantarell;
+  border-radius: 5px;
+}
+
+#custom-power {
+    background-color: #ff5555;
+    color: #d5c4a1;
+    box-shadow: inset 0 -3px #fbf1c7;
+    border-radius: 5px;
 }
