--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -50,7 +50,7 @@ window#waybar.solo {
     background-color: #af3a03;
     box-shadow: inset 0 -3px #fbf1c7;
     color: #d5c4a1;
-    border-radius: 5px;
+    border-radius: 3.5px;
 }
 
 #workspaces button.urgent {
@@ -103,24 +103,24 @@ label:focus {
 #cpu {
     background-color: #076678;
     color: #fbf1c7;
-    border-radius: 5px;
+    border-radius: 3.5px;
 }
 
 #memory {
     background-color: #b16286;
     color: #ebdbb2;
-    border-radius: 5px;
+    border-radius: 3.5px;
 }
 
 #backlight {
     background-color: #90b1b1;
-    border-radius: 5px;
+    border-radius: 3.5px;
 }
 
 #network {
     background-color: #79740e;
     color: #d5c4a1;
-    border-radius: 5px;
+    border-radius: 3.5px;
 }
 
 #network.disconnected {
@@ -131,7 +131,7 @@ label:focus {
 #pulseaudio {
     background-color: #665c54;
     color: #bdae93;
-    border-radius: 5px;
+    border-radius: 3.5px;
 }
 
 #pulseaudio.muted {
@@ -142,7 +142,7 @@ label:focus {
 #temperature {
     background-color: #427b58;
     color: #d5c4a1;
-    border-radius: 5px;
+    border-radius: 3.5px;
 }
 
 #temperature.critical {
@@ -156,7 +156,7 @@ label:focus {
 
 #idle_inhibitor {
     background-color: #928374;
-    border-radius: 5px;
+    border-radius: 3.5px;
 }
 
 #idle_inhibitor.activated {
@@ -168,12 +168,12 @@ label:focus {
   background-color: #d65d0e;
   color: #d5c4a1;
   font-family: Cantarell;
-  border-radius: 5px;
+  border-radius: 3.5px;
 }
 
 #custom-power {
-    background-color: #ff5555;
+    background-color: #fb4934;
     color: #d5c4a1;
     box-shadow: inset 0 -3px #fbf1c7;
-    border-radius: 5px;
+    border-radius: 3.5px;
 }
