--- a/desktop/.config/waybar/style.css
+++ b/desktop/.config/waybar/style.css
@@ -11,16 +11,19 @@
 
 @define-color bg #282828;
 @define-color dark #3c3836;
-@define-color cpu #076678;
-@define-color network #689d6a;
+@define-color cpu #458588;
+@define-color network #af3a03;
 @define-color white #D0BFA1;
 @define-color brightwhite #FCE8C3;
 @define-color pulseaudio #8f3f71;
 @define-color temperature #79740e;
-@define-color backlight #83a598;
+@define-color backlight #b57614;
 @define-color firefox_media #af3a03;
-@define-color memory #b57614;
+@define-color memory #427b58;
 @define-color idle_bg #b16286;
+@define-color clock #7c6f64;
+@define-color workspaces #458588;
+@define-color focused_workspace #83a598;
 
 window#waybar {
     background-color: @bg;
@@ -41,7 +44,7 @@ window#waybar.hidden {
 
 /*
 window#waybar.empty {
-    background-color: transparent;
+    background-color: @bg;
 }
 window#waybar.solo {
     background-color: #FFFFFF;
@@ -50,21 +53,19 @@ window#waybar.solo {
 
 #workspaces button {
     padding: 0 5px;
-    color: #d5c4a1;
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
+    color: @dark;
+    background: @workspaces;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 -3px #D0BFA1;
+    background: @focused_workspace;
     text-shadow: inherit;
 }
 
 #workspaces button.focused {
-    box-shadow: inset 0 -3px #F75341;
-    color: #F75341;
+    background: @focused_workspace;
+    color: @dark;
 }
 
 #workspaces button.urgent {
@@ -111,30 +112,31 @@ label:focus {
     background-color: #000000;
 }
 #clock {
-    color: #FCE8C3;
+    color: @bg;
+    background: @clock;
 }
 #cpu {
-    color: @white;
+    color: @bg;
     background: @cpu;
 }
 
 #memory {
-    color: @bg;
+    color: @white;
     background-color: @memory;
 }
 
 #backlight {
-    color: @dark;
+    color: @white;
     background: @backlight;
 }
 
 #network {
-    color: @dark;
+    color: @white;
     background: @network;
 }
 
 #network.disconnected {
-    color: #EF2F27;
+    color: #d79921;
 }
 
 #pulseaudio {
@@ -158,7 +160,6 @@ label:focus {
 
 #tray {
     background-color: #2C78BF;
-    box-shadow: inset 0 -3px #ffffff;
 }
 
 #idle_inhibitor {
@@ -171,12 +172,14 @@ label:focus {
 }
 
 #custom-firefox_media {
-  color: @firefox_media;
+  color: @white;
+  background: @firefox_media;
   font-family: Cantarell;
 }
 
 #custom-power {
-    color: #EF2F27;
+    color: #cc241d;
+    background: @bg;
 }
 #custom-arrow1 {
   color: @firefox_media;
@@ -211,6 +214,10 @@ label:focus {
     background: @temperature;
 }
 #custom-arrow9 {
-    color: @bg;
+    color: @clock;
     background: @backlight;
+}
+#custom-arrow10 {
+    color: @workspaces;
+    background: @bg;
 }
