--- a/desktop/.config/waybar/style.css
+++ b/desktop/.config/waybar/style.css
@@ -202,7 +202,7 @@ label:focus {
 }
 #custom-arrow7 {
     color: @temperature;
-    background: @memory;
+    background: @network;
 }
 #custom-arrow8 {
     color: @pacman;
