major update - mellowplayer, mako actions, qt env

--- a/desktop/.config/waybar/style.css
+++ b/desktop/.config/waybar/style.css
@@ -119,7 +119,7 @@ label:focus {
     color: @bg;
     background: @cpu;
 }
-#mellowplayer {
+#custom-mellowplayer {
   color: @white;
   background: @mellowplayer;
 }
