--- a/desktop/.config/wofi/style.css
+++ b/desktop/.config/wofi/style.css
@@ -34,6 +34,9 @@ background-color: #282828;
 #entry:selected {
 background-color: rgba(0,0,0,0);
 }
+#text {
+  font: Roboto;
+}
 #text:selected {
 border: 2px solid #000000;
 border-radius: 2px;
