--- a/desktop/.config/wofi/style.css
+++ b/desktop/.config/wofi/style.css
@@ -35,7 +35,7 @@ background-color: #282828;
 background-color: rgba(0,0,0,0);
 }
 #text {
-  font: IBM Plex Mono Medium 13.8;
+  font: Fantasque Sans Mono Medium 18;
 }
 #text:selected {
 border: 2px solid #000000;
