--- a/desktop/.config/nwg-launchers/nwgbar/style.css
+++ b/desktop/.config/nwg-launchers/nwgbar/style.css
@@ -1,22 +1,23 @@
 #bar {
-    margin: 30px /* affects top/bottom & left/right alignment */
+    margin: 30px; /* affects top/bottom & left/right alignment */
 }
 
-button, image {
+button,
+image {
     background: none;
     border-style: none;
     box-shadow: none;
-    color: #999
+    color: #999;
 }
 
 button {
     padding-left: 10px;
     padding-right: 10px;
-    margin: 5px
+    margin: 5px;
 }
 
 button:hover {
-    background-color: rgba (255, 255, 255, 0.1)
+    background-color: rgba (255, 255, 255, 0.1);
 }
 
 button:focus {
