--- a/desktop/.config/waybar/style.css
+++ b/desktop/.config/waybar/style.css
@@ -1,12 +1,13 @@
 * {
-  border: none;
-  border-radius: 0;
-  /* `otf-font-awesome` is required to be installed for icons */
-  font-family: Fantasque Sans Mono, all-the-icons, "FontAwesome 5 Free",FantasqueSansMono Nerd Font;
-  font-size: 18px;
-  min-height: 0;
-  margin: 0;
-  padding: 0;
+    border: none;
+    border-radius: 0;
+    /* `otf-font-awesome` is required to be installed for icons */
+    font-family: Fantasque Sans Mono, all-the-icons, "FontAwesome 5 Free",
+        FantasqueSansMono Nerd Font;
+    font-size: 18px;
+    min-height: 0;
+    margin: 0;
+    padding: 0;
 }
 
 @define-color bg #282828;
@@ -24,20 +25,21 @@
 @define-color workspace_hover #9cdcfe;
 @define-color bct rgba(50, 50, 50, 0.5);
 window#waybar {
-  background: rgba(50, 50, 50, 0.5);
-  color: #BBBBBB;
-  transition-property: background-color;
-  transition-duration: .5s;
+    background: rgba(50, 50, 50, 0.5);
+    color: #bbbbbb;
+    transition-property: background-color;
+    transition-duration: 0.5s;
 }
 
 window#waybar.hidden {
-  opacity: 0.2;
+    opacity: 0.2;
 }
 
 #window {
-  padding: 0 10px;
-  font-family: Fira Sans;
-  font-size: 15px;
+    padding: 0 10px;
+    font-family: Cantarell;
+    font-weight: 500;
+    font-size: 14.5px;
 }
 
 /*
@@ -49,125 +51,124 @@ background-color: #FFFFFF;
 }
  */
 
-  #workspaces button {
+#workspaces button {
     padding: 0 5px;
     color: @white;
     background: @bct;
-  }
+}
 
-  /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-  #workspaces button:hover {
+/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
+#workspaces button:hover {
     background: @workspace_hover;
     color: @dark;
     text-shadow: inherit;
-  }
+}
 
-  #workspaces button.focused {
+#workspaces button.focused {
     background: @bct;
     color: @workspaces;
-  }
+}
 
-  #workspaces button.urgent {
+#workspaces button.urgent {
     color: #eb4d4b;
-  }
+}
 
-  #mode {
-    color: #64727D;
+#mode {
+    color: #64727d;
     border-bottom: 3px solid #fbf1c7;
-  }
+}
 
-  #clock,
-  #battery,
-  #temperature,
-  #custom-pacman,
-  #network,
-  #pulseaudio,
-  #custom-media,
-  #tray,
-  #mode,
-  #idle_inhibitor,
-  #custom-firefox_media,
-  #custom-power,
-
-  #mpd {
+#clock,
+#battery,
+#temperature,
+#custom-pacman,
+#network,
+#pulseaudio,
+#custom-media,
+#tray,
+#mode,
+#idle_inhibitor,
+#custom-firefox_media,
+#custom-power,
+#mpd {
     padding: 0 10px;
     margin: 0 0px;
-  }
-  /* #clock {
+}
+/* #clock {
   background-color: #585123;
   } */
 
-  @keyframes blink {
+@keyframes blink {
     to {
-      background-color: #ffffff;
-      color: #000000;
+        background-color: #ffffff;
+        color: #000000;
     }
-  }
+}
 
-  label:focus {
+label:focus {
     background-color: #000000;
-  }
-  #clock {
+}
+#clock {
     color: @clock;
     background: @bct;
-  }
+}
 
-  #custom-pacman {
+#custom-pacman {
     color: @pacman;
     background: @bct;
-  }
+}
 
-  #network {
+#network {
     color: @network;
     background: @bct;
-  }
+}
 
-  #network.disconnected {
+#network.disconnected {
     color: #d79921;
-  }
+}
 
-  #pulseaudio {
+#pulseaudio {
     color: @pulseaudio;
     background: @bct;
-  }
+}
 
-  #temperature {
+#temperature {
     color: @temperature;
     background: @bct;
-  }
+}
 
-  #temperature.critical {
-    color: #EF2F27;
-  }
+#temperature.critical {
+    color: #ef2f27;
+}
 
-  #tray {
-    background-color: #2C78BF;
-  }
+#tray {
+    background-color: #2c78bf;
+}
 
-  #idle_inhibitor {
+#idle_inhibitor {
     color: @dark;
     background: @idle_bg;
-  }
+}
 
-  #idle_inhibitor.activated {
+#idle_inhibitor.activated {
     color: #ffffff;
-  }
+}
 
-  #custom-firefox_media {
+#custom-firefox_media {
     color: @firefox_media;
     background: @bct;
     font-family: Fira Sans;
     font-size: 13px;
-  }
+}
 
-  #custom-power {
+#custom-power {
     color: #cc241d;
     background: @bct;
-  }
+}
 
-  #mpd {
+#mpd {
     color: @firefox_media;
     background: @bct;
     font-family: Fira Sans;
     font-size: 13px;
-  }
+}
