--- a/desktop/.config/waybar/style.css
+++ b/desktop/.config/waybar/style.css
@@ -1,78 +1,79 @@
 @keyframes blink-warning {
-    70% {
-        color: white;
-    }
+        70% {
+                color: white;
+        }
 
-    to {
-        color: white;
-        background-color: @warning_color;
-    }
+        to {
+                color: white;
+                background-color: @warning_color;
+        }
 }
 
 @keyframes blink-critical {
-    70% {
-        color: white;
-    }
+        70% {
+                color: white;
+        }
 
-    to {
-        color: white;
-        background-color: @error_color;
-    }
+        to {
+                color: white;
+                background-color: @error_color;
+        }
 }
 
 * {
-    border: none;
-    border-radius: 0;
-    font-family: JetBrains Mono, all-the-icons, "FontAwesome 5 Free", FantasqueSansMono Nerd Font;
-    font-size: 13px;
-    min-height: 0;
-    margin: 0;
-    padding: 0;
+        border: none;
+        border-radius: 0;
+        font-family: Iosevka, all-the-icons, "FontAwesome 5 Free",
+                FantasqueSansMono Nerd Font;
+        font-size: 15px;
+        min-height: 0;
+        margin: 0;
+        padding: 0;
 }
 
 window#waybar {
-    transition-property: background-color;
-    background-color: black;
-    transition-duration: 0.5s;
+        transition-property: background-color;
+        background-color: black;
+        transition-duration: 0.5s;
 }
 
 window#waybar.hidden {
-    opacity: 0.2;
+        opacity: 0.2;
 }
 
 #window {
-    padding: 0 10px;
-    font-family: Cantarell;
-    background-color: black;
-    font-weight: 500;
-    font-size: 14.5px;
+        padding: 0 10px;
+        font-family: Cantarell;
+        background-color: black;
+        font-weight: 500;
+        font-size: 14.5px;
 }
 
 #workspaces button {
-    padding-left: 10px;
-    padding-right: 10px;
-    border-radius: 3px;
-    color: #888888;
+        padding-left: 10px;
+        padding-right: 10px;
+        border-radius: 3px;
+        color: #888888;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button:hover {
-    background: #45a1ff;
-    color: white;
-    text-shadow: inherit;
+        background: #45a1ff;
+        color: white;
+        text-shadow: inherit;
 }
 
 #workspaces button.focused {
-    color: white;
-    background-color: #0060df;
+        color: white;
+        background-color: #0060df;
 }
 
 #workspaces button.urgent {
-    color: @warning_color;
+        color: @warning_color;
 }
 
 #mode {
-    background: #64727d;
+        background: #64727d;
 }
 
 #clock,
@@ -88,36 +89,36 @@ window#waybar.hidden {
 #custom-firefox_media,
 #custom-power,
 #mpd {
-    padding: 0 10px;
+        padding: 0 10px;
 }
 
 #clock {
-    font-weight: bold;
+        font-weight: bold;
 }
 
 #temperature.critical {
-    background-color: @error_color;
-    color: white;
+        background-color: @error_color;
+        color: white;
 }
 
 #tray {
-    background-color: #2c78bf;
+        background-color: #2c78bf;
 }
 
 #custom-firefox_media {
-    font-family: Cantarell;
-    font-size: 12.5px;
+        font-family: Cantarell;
+        font-size: 12.5px;
 }
 
 #custom-power {
-    color: red;
+        color: red;
 }
 
 #mpd {
-    font-family: Cantarell;
-    font-size: 12.5px;
+        font-family: Cantarell;
+        font-size: 12.5px;
 }
 
 #network.disconnected {
-    color: @warning_color;
+        color: @warning_color;
 }
