--- a/desktop/.config/waybar/style.css
+++ b/desktop/.config/waybar/style.css
@@ -1,3 +1,10 @@
+@define-color pink #ff79c6;
+@define-color bold_purple #5a4b81;
+@define-color orange #FFB86C;
+@define-color purple #988bc7;
+@define-color green #67e480;
+@define-color dracula #282a36;
+@define-color red #e61f44;
 @keyframes blink-warning {
         70% {
                 color: white;
@@ -33,7 +40,7 @@
 
 window#waybar {
         transition-property: background-color;
-        background-color: black;
+        background-color: @dracula;
         transition-duration: 0.5s;
 }
 
@@ -44,7 +51,6 @@ window#waybar.hidden {
 #window {
         padding: 0 10px;
         font-family: Cantarell;
-        background-color: black;
         font-weight: 500;
         font-size: 14.5px;
 }
@@ -88,19 +94,35 @@ window#waybar.hidden {
 #idle_inhibitor,
 #custom-firefox_media,
 #custom-power,
+
 #mpd {
         padding: 0 10px;
+        color: #ff9400;
 }
 
 #clock {
         font-weight: bold;
+        background-color: @bold_purple;
+        color: white;
+}
+#custom-sep2 {
+        background-color: @orange;
+        color: @bold_purple;
 }
 
+#temperature {
+        font-weight: bold;
+        background-color: @purple;
+        color: @dracula;
+}
 #temperature.critical {
         background-color: @error_color;
         color: white;
 }
-
+#custom-sep4 {
+        background-color: @green;
+        color: @purple;
+}
 #tray {
         background-color: #2c78bf;
 }
@@ -111,7 +133,12 @@ window#waybar.hidden {
 }
 
 #custom-power {
-        color: red;
+        background-color: @red;
+        color: white;
+}
+#custom-sep1 {
+        background-color: @bold_purple;
+        color: @red;
 }
 
 #mpd {
@@ -119,6 +146,34 @@ window#waybar.hidden {
         font-size: 12.5px;
 }
 
+#network {
+        font-weight: bold;
+        background-color: @green;
+        color: @dracula;
+}
 #network.disconnected {
         color: @warning_color;
+}
+#custom-sep5 {
+        background-color: @pink;
+        color: @green;
+}
+
+#pulseaudio {
+        font-weight: bold;
+        background-color: @pink;
+        color: @dracula;
+}
+#custom-sep6 {
+        color: @pink;
+}
+
+#custom-pacman {
+        font-weight: bold;
+        background-color: @orange;
+        color: @dracula;
+}
+#custom-sep3 {
+        background-color: @purple;
+        color: @orange;
 }
